test_files/A7Tests/k03.out
ERROR(3): For statement requires that symbol 'to' be an array to loop through.
ERROR(4): For statement requires that symbol 'to' be an array to loop through.
Number of warnings: 0
Number of errors: 2
------------------------------------
Loading file: k03.tm
ERROR: Line 1 (Address: 0)   Illegal opcode: ERROR
Bye.
