test_files/A7Tests/k03.mem
ERROR(3): For statement requires that symbol 'to' be an array to loop through.
ERROR(4): For statement requires that symbol 'to' be an array to loop through.
Number of warnings: 0
Number of errors: 2
